edited the height in avatar.proportioned to "auto" Corrected the second instructions, both elements were named the same. Changed the name of the second element back to .avatar.distorted

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,9 +1,11 @@
 /* style.css */
 
-.proportioned   {
-    width: 300px; height: unset;
+.avatar.proportioned   {
+    width: 300px;
+    height: auto;
 }
 
-.distorted {
-    width: 200px; height: 400px;
+.avatar.distorted {
+    width: 200px;
+    height: 400px;
 }
